# measuring-and-guiding-monosemanticity

./: LICENSE  README.md  pyproject.toml
create_data/: act_dataset.py  create_dataset.py
eval/: Detection_PII.py  FMS_PII.py  FMS_RTP_SP.py  FMS_Scores.ipynb  Features_PII.py  Features_RTP_SP.py  Steering_PII.py  Steering_RTP.py  Steering_SP.py  WinRate.py
gemma2_SAE/: config.json  configuration_gemma2_SAE.py  modeling_gemma2_SAE.py
gemma2_SAE/SAE_config/: gemma2-l21504-b14-k2048.json  gen_config.py
llama3_SAE/: config.json  config_70B.json  configuration_llama3_SAE.py  modeling_llama3_SAE.py
llama3_SAE/SAE_config/: gen_config.py  llama3-l131072-b11-k192.json  llama3-l24576-b11-k2048.json  llama3_70B-l24576-b62-k32.json  llama3_instruct-l24576-b11-k2048.json
train/: determined_trails.py  pii_classifier.py  sp_classifier.py  train_SAE_24k_k2048.yaml
utils/: Toxicity_API.py  create_trees.py  get_latents.py  highlighting.py  instruction_grader.py  persedio_config.py  sae_loading.py  tree_loader.py
