[tool.poetry]
name = "measuring-and-guiding-monosemanticity"
version = "0.1.0"
description = ""
authors = ["."]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
transformers = {extras = ["sentencepiece"], version = "^4.43"}
plotly = "^5.22.0"
datasets = "^2.19.2"
lightning = "^2.2.5"
zstandard = "^0.22.0"
jupyter = "^1.0.0"
blobfile = "2.0.2"
transformer-lens = "1.9.1"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
graphviz = "^0.20.3"
google-api-python-client = "^2.135.0"
langdetect = "^1.0.9"
immutabledict = "^4.2.0"
huggingface-hub = {extras = ["cli"], version = "^0.23.4"}
kaleido = "0.1.0"
determined = "0.26.4"
tensorboard = "^2.17.0"
statsmodels = "^0.14.2"
aleph-alpha-client = "^7.4.0"
openai = "^1.52.1"
# presidio-analyzer = {extras = ["transformers"], version = "^2.2.357"}
# thinc = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
create = true
path = "./.venv"